Fixed broken CSS links

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -2,36 +2,36 @@ h1,
 h2,
 h3,
 p {
-    font-family: Helvetica;
+  font-family: Helvetica;
 }
 
 h1 {
-    background-image: url(/CSS/Images/pattern.jpeg);
-    font-size: 100px;
-    font-weight: bold;
-    color: khaki;
-    text-align: center;
+  background-image: url(Images/pattern.jpeg);
+  font-size: 100px;
+  font-weight: bold;
+  color: khaki;
+  text-align: center;
 }
 
 h2 {
-    font-size: 32px;
-    font-weight: bold;
-    color: white;
+  font-size: 32px;
+  font-weight: bold;
+  color: white;
 }
 
 #brushes {
-    background-color: mediumspringgreen;
+  background-color: mediumspringgreen;
 }
 
 #frames {
-    background-color: lightcoral;
+  background-color: lightcoral;
 }
 
 #paint {
-    background-color: skyblue
+  background-color: skyblue;
 }
 
 .price {
-    font-weight: bold;
-    color: blue;
+  font-weight: bold;
+  color: blue;
 }
